<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <FrameLayout
        android:id="@+id/fragment_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <com.github.clans.fab.FloatingActionMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="bottom|right"
        app:fab_size="normal"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="@+id/fragment_placeholder"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_colorNormal="@color/colorMenu"
        app:menu_colorPressed="@color/colorMenuPressed"
        app:menu_icon="@drawable/menu"
        app:menu_labels_colorNormal="@color/colorMenu"
        app:menu_labels_colorPressed="@color/colorMenuPressed"
        app:menu_labels_showShadow="true"
        app:menu_labels_textColor="#000000"
        app:menu_openDirection="up"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notif"
            app:fab_colorNormal="@color/colorMenu"
            app:fab_colorPressed="@color/colorMenuPressed"
            app:fab_label="@string/menu_notif"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setting"
            app:fab_colorNormal="@color/colorMenu"
            app:fab_colorPressed="@color/colorMenuPressed"
            app:fab_label="@string/menu_language"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/refresh_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refresh_app"
            app:fab_colorNormal="@color/colorMenu"
            app:fab_colorPressed="@color/colorMenuPressed"
            app:fab_label="@string/menu_refresh"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>